syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.keenmate.chat";
option java_outer_classname = "UserProto";
option objc_class_prefix = "HLW";

package com.keenmate.chat;

import "Common.proto";

service UserProvider {
	rpc Connect (ConnectRequest) returns (User);
	
	// receives user's guid and makes sure that all server-side consumers/observers etc. will be released
	rpc Disconnect (StringMessage) returns (Status);
	// rpc GetUsers (Empty) returns (stream UserChange);
}

message ConnectRequest {
	string name = 1;
}

message RetrieveUserRequest {
	string userGuid = 1;
}

message UserChange {
	User user = 1;
	
	TheChange change = 2;
}

message User {
	reserved "creatorId";
	reserved 1;
	string userGuid = 4;
	string name = 2;
	int64 loggedOn = 3;
}
